Amended styling to fix an issue on tablets

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -23,6 +23,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
     background-color: #f8f8f8;
+
+    &#mainbody {
+        padding-top: 20px;
+    }
 }
 
 .headercontainer {
@@ -160,6 +164,10 @@ ul.pager {
 
 div.navbar-header {
     width: 100%;
+}
+
+.navbar {
+    margin-bottom: 0;
 }
 
 a#github-image img {
